test/spp/spp.conf
#
# choose satellite systems
#

# G: GPS
# E: Galileo
# R: GLONASS
# C: Beidou
# J: QZSS
# I: IRNSS
# examples:
# system = G
# system = GERCJI
system = GEC

# if you want to test your code quickly using obsevables of given epoch span
# please chage begin_sod and end_sod 
begin_sod = 0.0
end_sod   = 86400.0

# static or kinematic
rcvState = 1

#
# elevation
elevation = 10


